this is first project

--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Friday</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+   
+<h1 style="text-align: center;">فيما يلي بعض الأذكار والأقوال والأفعال الواردة عن النبي محمد صلى الله عليه وسلم المتعلقة في يوم الجمعة</h1> <br>
+   <h2>:الغسل والتطيب ولبس أحسن الثياب</h2>
+        <h4>عن سلمان الفارسي رضي الله عنه قال: قال النبي صلى الله عليه وسلم: "لا يغتسل رجل يوم الجمعة، ويتطهر بما استطاع من طهر، ويدهن من دهنه، أو يمس من طيب بيته، ثم يخرج فلا يفرق بين اثنين، ثم يصلي ما كتب له، ثم ينصت إذا تكلم الإمام، إلا غفر له ما بينه وبين الجمعة الأخرى" (رواه البخاري)</h4>
+    <div class="kahf">
+        <h2><a href="kahaf_read.pdf" target="_blank" style="color: #000;">:قراءة سورة الكهف</a></h2>
+        <h4>عن أبي سعيد الخدري رضي الله عنه، عن النبي صلى الله عليه وسلم أنه قال: "من قرأ سورة الكهف في يوم الجمعة أضاء له من النور ما بين الجمعتين" (رواه الحاكم والبيهقي)</h4>
+        <section>
+            <audio controls preload="auto">
+                <source src="kahf_dosary.mp3" type="audio/mpeg">
+                <source src="kahf_dosary.ogg" type="audio/ogg">
+                your browser don`t support audio technology
+            </audio>
+        </section>
+    </div>
+    <h2>:الإكثار من الصلاة على النبي </h2> 
+        <h4>عن أوس بن أوس رضي الله عنه قال: قال رسول الله صلى الله عليه وسلم: "إن من أفضل أيامكم يوم الجمعة، فأكثروا علي من الصلاة فيه، فإن صلاتكم معروضة علي" (رواه أبو داود)</h4>
+    <h2>:التبكير إلى صلاة الجمعة</h2> 
+        <h4>عن أبي هريرة رضي الله عنه أن رسول الله صلى الله عليه وسلم قال: "من اغتسل يوم الجمعة غسل الجنابة، ثم راح فكأنما قرب بدنة، ومن راح في الساعة الثانية فكأنما قرب بقرة، ومن راح في الساعة الثالثة فكأنما قرب كبشًا أقرن، ومن راح في الساعة الرابعة فكأنما قرب دجاجة، ومن راح في الساعة الخامسة فكأنما قرب بيضة، فإذا خرج الإمام حضرت الملائكة يستمعون الذكر" (رواه البخاري ومسلم)</h4>      
+    <h2>:الإنصات للخطيب</h2>
+        <h4>عن أبي هريرة رضي الله عنه أن رسول الله صلى الله عليه وسلم قال: "إذا قلت لصاحبك يوم الجمعة أنصت والإمام يخطب فقد لغوت" (رواه البخاري ومسلم)</h4>
+    <h2>:الدعاء في ساعة الإجابة</h2>  
+        <h4>عن أبي هريرة رضي الله عنه أن رسول الله صلى الله عليه وسلم ذكر يوم الجمعة فقال: "فيه ساعة لا يوافقها عبد مسلم وهو قائم يصلي يسأل الله تعالى شيئًا إلا أعطاه إياه" (رواه البخاري ومسلم)</h4>
+    <h2>هذه الأذكار والأقوال والأفعال تعزز من أهمية يوم الجمعة وتجعل المسلم يستغل هذا اليوم في العبادة والتقرب إلى الله عز وجل</h2>
+
+    <br> <br> <br> <br> <br>
+    <footer>
+        <a href="https://amgad.store" target="_blank" style="color: #fff;">Prepare By AWM</a>
+        <p>All rights reserved &copy; 2024</p>
+        <br> 
+    </footer>
     
+
+    <script src="script.js"></script>
 </body>
 </html>
