--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <br> <br> <br> <br> <br>
     <footer>
         <a href="https://amgad.store" target="_blank" style="color: #fff;">Prepare By AWM</a>
-        <p>All rights reserved &copy; 2025</p>
+        <p>All rights reserved AWM &copy; 2025</p>
         <br> 
     </footer>
     
